Image changer correction Add second section Create window to behind image

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 html {
   scroll-behavior: smooth;
+  background-color: black;
 }
 
 #anchorOne,
@@ -57,11 +58,10 @@ html {
   padding-top: 80px;
 }
 
-.testdivcont {
+/* .testdivcont {
   height: 100vh;
-  /* height: calc(100vh - 80px); */
   padding-top: 80px;
-}
+} */
 
 .anchordiv {
   position: absolute;
@@ -70,9 +70,9 @@ html {
   background-color: blueviolet;
 }
 
-.one {
+/* .one {
   background-color: bisque;
-}
+} */
 .two {
   background-color: burlywood;
 }
@@ -101,3 +101,53 @@ html {
 /* Hover
 Active
 Focus */
+
+.backgroundImage {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: -10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100vw;
+  height: 100vh;
+}
+
+.bgImageTop {
+  width: 100vw;
+  height: 80px;
+  background-color: burlywood;
+}
+
+.testbehindimage {
+  width: 100vw;
+  height: calc(100vh - 80px);
+  background-image: url("./assets/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.secTwo_upper,
+.secTwo_middle,
+.secTwo_bottom {
+  height: calc(50% + 80px);
+  width: 100vw;
+  background-color: burlywood;
+}
+
+.secTwo_upper {
+  margin-top: -80px;
+  padding-top: 80px;
+}
+
+.secTwo_bottom {
+  height: 30%;
+}
+
+.secTwo_middle {
+  height: 20%;
+  background-color: rgba(255, 255, 255, 0);
+}
